fix mobile alignment

--- a/src/app/components/footer-right/footer-right.component.scss
+++ b/src/app/components/footer-right/footer-right.component.scss
@@ -40,7 +40,7 @@ border-radius: 3rem;
  .footer-icons{
 
   top:1rem;
-  right:0;
+  right:1rem;
   // right:10%;
   // font-size: 3rem;
   max-width: 4rem;
